<resources>

    
    
    
    
    <string name="activity_message_list_logout_title">Do you want Logout?</string>
    <string name="activity_message_list_logout_yes">Yes</string>
    <string name="activity_message_list_logout_no">No</string>
    
    <string name="title_activity_login">Login</string>
    <string name="toast_version_number">Version %1$s</string>
    <string name="login_help_nointernetconnection">No Connection!</string>
    <string name="login_message_authentication_noconnection">No Connection with Server</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Insert Password</string>
    <string name="message_async_operation_failed">Update Failed!</string>
    <string name="logout">Logout</string>
    <string name="menu_submenu">Submenu</string>
    <string name="activity_message_list_quit_title">Do you want quit?</string>
    <string name="activity_message_list_quit_yes">Yes</string>
    <string name="activity_message_list_quit_no">No</string>
    <string name="activity_messagelist_title">Dashboard</string>
    <string name="progressbar_loading">Loading...</string>
    <string name="activity_select_users_title">Select User</string>
    <string name="menu_user_add">Follow User</string>
    <string name="activity_message_create_title">New message</string>
    <string name="menu_message_add">New message</string>
    <string name="progressbar_create_message">Saving Message....</string>
    <string name="toast_message_created">Message Created!</string>
    <string name="toast_follow_created">User Added!</string>
    <string name="toast_follow_removed">User Removed!</string>
    <string name="label_message_create_cancel">Cancel</string>
    <string name="label_message_create_ok">Save</string>
    <string name="noMessagePresents">No Messages</string>
    <string name="refresh_action">Refresh</string>
    <string name="prompt_username">Username</string>
    <string name="action_sign"><b>Sign In</b></string>
    <string name="login_userId">User:</string>
    <string name="login_send">Login</string>
    <string name="settings">Settings</string>
    <string name="login_password">Password: </string>
    <string name="login_message_authentication_username_password_required">Username and password required</string>
    <string name="login_message_user_download_content">Content update</string>
    <string name="login_message_user_password_verify">Verify username and password...</string>
    <string name="login_message_user_password_verify_please_wait">Please Wait</string>
    <string name="login_message_authentication_failed_wrongusername">Wrong Username or Password</string>
    <string name="app_name">Twitter Like</string>
    <string name="pref_network_setting_title">Connection Preferences</string>
    <string name="pref_network_protocol_summary">Set Protocol</string>
    <string name="pref_network_protocol">Protocol</string>
    <string name="pref_network_hostname_summary">Set hostname</string>
    <string name="pref_network_hostname">Hostname</string>
    <string name="pref_network_port">Port</string>
    <string name="pref_network_port_summary">Set Port</string>
    <string name="pref_network_context">Context</string>
    <string name="pref_network_context_summary">Set Context</string>
   
    
     <string name="about">About</string>
    <string name="aboutMessage">This is just a simple demo for the Open Source Twitter Client And Server Android Library. Find all source, documentation and packaged downloads at GitHub.</string>
    <string name="ok">Ok</string>
    <string name="goToGitHub">Go to GitHub</string>
    

</resources>