<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/addMessage"
        android:icon="@drawable/ic_action_add_to_queue"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_message_add"/>
    <item
        android:id="@+id/addFollow"
        android:icon="@drawable/ic_action_person"
        android:showAsAction="always"
        android:title="@string/menu_user_add">
    </item>
    <item
        android:id="@+id/menu_submenu"
        android:icon="@drawable/ic_action_overflow"
        android:showAsAction="always"
        android:title="@string/menu_submenu">
        <menu>
            <item
                android:id="@+id/refresh"
                android:icon="@drawable/ic_action_refresh"
                android:showAsAction="ifRoom|withText"
                android:title="@string/refresh_action">
            </item>
            <item
                android:id="@+id/menu_logout"
                android:icon="@drawable/ic_action_person"
                android:showAsAction="ifRoom|withText"
                android:title="@string/logout"/>
        </menu>
    </item>

</menu>